--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 body{
-  width: 80%;
+  max-width: 1310px;
   margin: 0 auto;
   font-family: "Roboto Condensed", sans-serif;
+}
+.main-wrapper{
+  padding: 20px 30px  0;
+  
+}
+h2{
+  padding: 0 0 11px;
 }
 .top-navbar{
   background: #f72210;
@@ -9,14 +16,7 @@ body{
 .border{
   border: solid 2px red;
 }
-/* }
-.nav-1{
-  border: solid 2px green;
-}
-.ul-1{
-  border: solid 2px yellow;
-  width: 100%;
-} */
+
 header a{
   color: white;
   text-decoration: none;
@@ -26,88 +26,50 @@ header a{
   max-width: 220px;
   font-size: 15px;
   color: white;
-  /* margin-left: -10px; */
 }
+
 .newsweek-logo{
   width: 396px;
   background-color: lavender;
 }
-nav ul {
+.nav-bar ul {
     display: inline-block;
-    padding-right: 1%;
     white-space: nowrap;
     width: 100%;
 }
-nav li a{
+.nav-bar li a{
     font-size: 15px;
     line-height: 24px;
     font-weight: bold;
     font-family: "Roboto Condensed",sans-serif;
-}
- /* .top_navbar{
-  background: #f72210;
-  padding: 20px 10px 15px;
-  width: 100%;
-  max-height: 96px;
-  display: block;
-}
-
-.top_navbar_list{
-  list-style-type: none;
-  display: flex;
-  justify-content: space-between;
-}
-.top_navbar_list a{
-  color: white;
-}
-.top_navbar_item_left{
-  flex-direction:column;
-  font-size: 1rem;
-  margin-left:20px;
-  align-content: center;
-  width: fit-content;
-  font-weight: 600;
-  height: 100%;
-} */
+    display: block;
+    padding: 0  0.5rem;
+    margin: 0;
+    border-right: solid 1px lavender;
+  }
 
 .nav-img{
   width: 24px;
 }  
 
-/* .date{
-  padding-top: 10px;
-  color: white;
-}
-.top_navbar_item_center{
-  display: flex;
-  justify-content: center;
-}
-
-.top_navbar_item_right{
-  display: flex;
-  font-size: 1.3rem;
-  padding-top: 30px;
-} */
 .top_navbar_sign_in{
   font-weight: 700;
-  /* padding: 6px 12px; */
   font-size: 18px;
 }
 .subscribe_btn{
-  color: red;
-  font-weight: 700;
+  background-color: #F72210;
+  color: #fff;
+  font-weight: bolder;
   font-size: 18px;
-  /* padding: 6px 10px 6px 12px; */
+  font-family: "Roboto Condensed", sans-serif;
+  padding: 10px 10px 10px 12px;
   border: none;
 }
-/* .bottom_navbar a{
-  font-size: 1rem;
-  width: auto;
-} */
 
 .search_input{
   width: 100%;
   font-size: 19px;
+  max-width: 100px;
 }
 .fa-search{
   padding-top: 10px;
@@ -120,14 +82,32 @@ nav li a{
 .featured_stories{
   border-radius: 0%;
 }
-.featured_img{
+.img-100{
   width: 100%;
+  max-width: 336px;
 }
 
-.featured_heading{
+.first-section-title{
   font-size: 16px;
-  cursor: pointer;
+  font-family:"Roboto Condensed",sans-serif;
+  color: #9A9A9A;
+  width: 100%;
+  max-width: 329px;
 }
+.featured-articles{
+  padding: 0 0 20px;
+  min-height: 330px;
+  height: 100%;
+}
+.article-title{
+  font-size: 20px;
+  font-family:"Roboto Condensed",sans-serif;
+  margin: 0 0 10px;
+}
+.article-body{
+  line-height: 20px;
+}
+
 .black{
   color: black;
 }
@@ -137,14 +117,48 @@ nav li a{
 .politics{
   position: relative;
   max-width: 100px;
-  /* margin-top: -1rem; */
-  padding: 0;
+  margin-top: -29px;
+  padding: 5px 5px;
   text-align: center;
   text-decoration: none;
   color:red;
   background-color: #ECEEEF;
 }
-
+.top-story-article{
+  padding: 0 0 20px;
+}
+.top-story-paragraph{
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.top-story-img{
+  min-width: 487px;
+  width: 100%;
+  max-height: 299px;
+}
+.heros-articles{
+  min-height: 515px;
+  height: 100%;
+}
+.hero-img{
+  max-width: 149px;
+  min-height: 148px;
+  width: 100%;
+  
+}
+.hero-img-h{
+  max-height: 149px;
+  height: 100%;
+}
+.hero-body{
+  padding: 15px 0 20px;
+}
+.card-text-hero{
+  margin: 0 0 10px;
+}
+.opinion-article{
+  padding: 0 0 10px;
+}
 .opinion_heading{
   font-size: 16px;
   margin-left: 3%;
@@ -158,10 +172,6 @@ nav li a{
   color:red;
   background: #ECEEEF;
 }
-.opinion_article{
-  display: flex;
-  border-bottom: 1px solid #555;
-}
 .debate_img,
 .opinin_img{
   width: 60px;
@@ -172,28 +182,21 @@ nav li a{
   font-weight: 700;
   margin-left: 0;
 }
-.opinion_article2{
-  padding-left: 10px;
-}
+
 .opinion_author{
   color: #555;
   font-size: 12px;
   font-weight: bold;
 }
-.hero_container{
-  padding-left: 0;
-}
-.hero_container2{
-  padding-right: 0;
-}
+
 .hero_img{
-  max-width: 100%;
-  min-height: 115px;
+  width: 100%;
+  max-width: 148px;
 }
 .hero_stripe{
   position: relative;
   min-width: 116px;
-  margin-top: -1.1rem;
+  margin-top: -0.9rem;
   padding: 0 6px;
   font-size: 13px;
   text-align: center;
@@ -201,18 +204,57 @@ nav li a{
   color:#484C4D;
   background-color:#C2D4D7;
 }
-
-.more_stories_title {
-  font-size: 15px;
-  width: 100%;
-  max-width: 500px;
+.more-stories-article{
+  max-width: 487px;
+  padding: 14px 0;
+}
+.latest-news-article{
+  padding: 10px;
+}
+.opinion-stories-title{
+  font-size: 17px;
+  font-family: "Roboto Condensed", sans-serif;
+  color: #000;
+  font-weight: bold;
+}
+.more-stories-title {
+  font-size: 17px;
+  font-family: "Roboto Condensed", sans-serif;
+  color: #000;
+  font-weight: bold;
+  margin: 0 0 10px;
+}
+.more-stories-paragraph{
+ font-size: 15px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 .more-stories_img{
-  min-width: 96px;
-  width: 100%;
+  max-width: 95px;
+  min-height: 95px;
 }
-.debate{
-  border-bottom: 3px solid red;
+.debate-heading{
+  padding: 30px 0 11px;
+}
+.debate-guest{
+  border-top: solid 3px red;
+}
+.debate-guest2{
+  border-top: solid 3px blue;
+}
+.debate-author{
+  font-size: 14px;
+  color: #000;
+  font-family: "Robonto Condensed", sans-serif;
+  font-weight: bold;
+}
+.debate-VS{
+  color: #000;
+  border-radius: 50%;
+  padding: 18px 12px;
+  background-color: #333;
+  margin: 14px 143px 18px;
+  font-size: 14px;
+  font-family: "Robonto Condensed", sans-serif;
 }
 .debate_host{
   font-size: 12px;
@@ -224,10 +266,6 @@ nav li a{
   color: #000;
   font-weight: bolder;
 }
-/* 
-.in_the_magazine_title{
-  background-color: #f72210;
-} */
 .full-width{
   width: 100%;
 }
@@ -239,7 +277,40 @@ nav li a{
   position: relative;
   width: 100%;
 }
-
+.card-articles{
+  padding: 0 0 30px;
+}
+.newsletter-container{
+  margin: 0 13.833px 30px;
+  padding: 20px;
+  background: #F4F5F6;
+}
+.newsletter-title{
+  color: #000;
+  font-size: 19px;
+  font-family: "Roboto Condensed" sans-serif;
+  font-weight: bold;
+  padding-left: 10px;
+  
+}
+.signup-call{
+  margin: 0 0 15px;
+  max-width: 250px;
+}
+.sign-up-btn{
+  background: #666;
+  margin: 0 0 10px;
+  padding: 10px 10px 10px 12px;
+  font-size: 18px;
+  font-family: "Roboto Condensed" sans-serif;
+  border-radius: 0%;
+}
+.pu-link{
+  color: #000;
+  font-size: 15px;
+  font-family: "Roboto Condensed" sans-serif;
+  font-weight: bold;
+}
 .category {
   text-transform: uppercase;
   font-size: 17px;
@@ -253,12 +324,37 @@ nav li a{
   padding: 8px 15px 9px;
   margin-bottom: 2.4rem;
   color: #f72210;
+  
+}
+.mag-date{
+  color: #000;
+  border: 2px solid yellowgreen;
 }
 .category a:hover {
   text-decoration: none;
   color: inherit;
 }
+.mag-heading{
+  margin: 0 0 15px;
+  width: 100%;
+}
+.mag-title{
+  font-size: 19px;
+  font-family: "Roboto Condensed", sans-serif;
+  color: #000;
+  font-weight: bold;
+}
 
+.magzine-wrapper{
+  padding: 0 15px;
+}
+.mag-img{
+  max-width: 278px;
+  width: 100%;
+}
+.mag-article-wrapper{
+  padding: 0 15px;
+}
 .mag-promo-link {
   display: block;
   background-color: #f4f5f6;
@@ -287,20 +383,18 @@ nav li a{
 }
 .mag_link{
   color: #f72210;
-  /* font-weight: bold; */
+
 }
 .mag_link2{
   text-decoration: none;
   color: #000;
   font-weight: bolder;
 }
-h2 a:hover{
+h1 a:hover{
   color:black;
   text-decoration: underline red;
 }
-.article2{
-  border: solid 2px red;
-}
+
 /* @media screen and (min-width: 575px) {
   body{
     background-color: green;
@@ -323,16 +417,22 @@ h2 a:hover{
   width: 30px;
   height: 30px;
 }
-
+.us-heading-wrapper{
+  padding: 25px 0 11px;
+}
 .us{
   font-size: 25px;
 }
-.us-wrapper{
-  border: solid 2px green;
+.us-article{
+  min-height: 308px;
+  height: 100%;
 }
+
 .us-img{
   width: 100px;
-  height: 100px;
+  min-width: 381px;
+  min-height: 254px;
+  height: 100%;
 }
 .responsive {
   width: 100%;
@@ -341,24 +441,86 @@ h2 a:hover{
 .us2-wrapper{
   border: solid 2px red;
   width: 100%;
-  /* height: auto; */
 }
 .height{
   height: 98px;
 }
+
+.sub-title{
+  font: 16px;
+  font-family: "Roboto Condensed", sans-serif;
+  padding: 0 0 11px;
+  color: #f72210;
+}
 .sub-img{
-  max-width: 246px;
+  max-width: 170px;
+}
+/* .sub-img2{
+  position: relative;
+  z-index: 2;
+} */
+.sub-wrapper{
+  padding: 40px 0 0;
+}
+.sub-wrapper2{
+  padding: 0 11px;
 }
 .sub-container{
   background-color: #F4F5F6;
+  padding: 30px;
 }
-.sub-wrapper{
-  border: solid 2px red;
+.sub-paragraph{
+  padding: 0 0 0 30px;
 }
+.signup-wrapper{
+  min-height: 301px;
+  padding: 40px 0 0;
+}
+.sign-up-img{
+  max-width: 390px;
+  width: 100%;
+  min-height: 287px;
+}
+.sign-up-container{
+  background-color: white;
+  padding-left: 0 15px;
+}
+
 .footer-logo {
   max-width: 236px;
 }
 .footer-copyright{
   font-size: 10px;
   font-weight: bold;
+}
+
+/*
+Extra small (xs) devices (portrait phones, less than 576px)
+No media query since this is the default in Bootstrap
+Small (sm) devices (landscape phones, 576px and up)
+@media (min-width: 576px) { ... }
+Medium (md) devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+Large (lg) devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+Extra (xl) large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
+*/
+
+@media (min-width: 576px){
+  
+  
+}
+@media (min-width: 768px){
+  header{
+    height: 48px;
+  }
+  .newsweek-logo-small{
+    width: 131px;
+  }
+}
+
+@media (min-width: 992px){
+ 
+  
 }
