Fixed html validator errors

--- a/style.css
+++ b/style.css
@@ -508,6 +508,11 @@ Large (lg) devices (desktops, 992px and up)
 Extra (xl) large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { ... }
 */
+@media(max-width: 576px){
+  .newsweek-logo-small{
+    max-width: 131px;
+  }
+}
 
 @media (min-width: 576px) {
   .newsweek-logo-small {
