Formatted CSS with CSS formatter

--- a/style.css
+++ b/style.css
@@ -39,24 +39,51 @@ body {
   font-size: 19px;
 }
 
-.article-title, .fa-search {
+.article-title,
+.fa-search {
   font-size: 20px;
 }
 
 header a,
-.header_left, .nav-bar li a, .subscribe_btn, .cover-span, .sign-up-btn {
+.header_left,
+.nav-bar li a,
+.subscribe_btn,
+.cover-span,
+.sign-up-btn {
   color: #fff;
 }
 
-.opinion_paragraph, .opinion-stories-title, .more-stories-title, .debate-author, .debate_host span, .newsletter-title, .pu-link, .mag-date, .mag-title, .mag_link2, .title {
+.opinion_paragraph,
+.opinion-stories-title,
+.more-stories-title,
+.debate-author,
+.debate_host span,
+.newsletter-title,
+.pu-link,
+.mag-date,
+.mag-title,
+.mag_link2,
+.title {
   color: #000;
 }
 
-.opinion_author, .more-stories-title, .opinion-stories-title, .debate-author, .newsletter-title, .pu-link, .mag-title, .mag-promo-link, .title, .footer-copyright {
+.opinion_author,
+.more-stories-title,
+.opinion-stories-title,
+.debate-author,
+.newsletter-title,
+.pu-link,
+.mag-title,
+.mag-promo-link,
+.title,
+.footer-copyright {
   font-weight: bold;
 }
 
-.header-subscribe_btn, .subscribe_btn, .debate_host span, .mag_link2 {
+.header-subscribe_btn,
+.subscribe_btn,
+.debate_host span,
+.mag_link2 {
   font-weight: bolder;
 }
 
@@ -98,7 +125,6 @@ header a {
 .nav-bar li a {
   width: 67px;
   height: 24px;
-  /* border-right: solid 1px lavender; */
   padding: 0 8px;
   color: #000;
 }
@@ -220,8 +246,7 @@ header a {
   background: #ECEEEF;
 }
 
-.debate_img,
-.opinin_img {
+.debate_img, .opinin_img {
   width: 60px;
   height: 60px;
 }
@@ -480,7 +505,7 @@ h1 a:hover {
   font-size: 10px;
 }
 
-.footer-links{
+.footer-links {
   display: flex;
   flex-wrap: wrap;
   border-top: 1px solid #d9d9d9;
@@ -490,7 +515,7 @@ h1 a:hover {
   color: #666;
 }
 
-.bottom-links{
+.bottom-links {
   border-right: 1px solid #d9d9d9;
   padding-right: 10px;
   margin-right: 10px;
@@ -508,8 +533,9 @@ Large (lg) devices (desktops, 992px and up)
 Extra (xl) large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { ... }
 */
-@media(max-width: 576px){
-  .newsweek-logo-small{
+
+@media(max-width: 576px) {
+  .newsweek-logo-small {
     max-width: 131px;
   }
 }
@@ -518,11 +544,13 @@ Extra (xl) large devices (large desktops, 1200px and up)
   .newsweek-logo-small {
     max-width: 131px;
   }
+
   .menu-icon {
     min-width: 74px;
     min-height: 50px;
     color: #FB9A94;
   }
+
   .fa-bars {
     font-size: 35px;
   }
@@ -532,17 +560,17 @@ Extra (xl) large devices (large desktops, 1200px and up)
   .newsweek-logo-small {
     max-width: 131px;
   }
+
   .sponsored-article {
     width: 50%;
   }
+
   .newsletter-small {
     width: 40%;
   }
+
   .height-small {
     height: 100%;
-  }
-  .us-col {
-    width: 33.33333333%;
   }
 }
 
