Fixed the bottom nav-bar

--- a/style.css
+++ b/style.css
@@ -120,17 +120,52 @@ h2 {
   background-color: lavender;
 }
 
-.nav-bar ul {
-  display: inline-block;
-  white-space: nowrap;
-  padding: 0 60px 0 20px;
+.row
+.navbar_wrapper{
+  width: 100%;
+  margin: 0 auto;
 }
 
-.nav-bar li a {
-  width: 67px;
-  height: 24px;
-  padding: 0 8px;
+.navbar-link {
+  display: inline-block;
+  padding-right: 1%;
+  white-space: nowrap;
   color: #000;
+}
+
+.navbar-link a :hover{
+  color: red;
+}
+
+.search-wrapper {
+  display: inline-block;
+  border: none;
+  width: 100px;
+  height: 54px;
+  padding: 15px 15px 15px 0;
+}
+
+.search-wrapper {
+  margin-right: 70px;
+}
+
+.col_nav {
+  font-size: 19px;
+  border-right: solid 1px #d9d9d9;
+  height: fit-content;
+  justify-content: flex-start;
+}
+
+.search{
+  width: 100px;
+  width: 60px;
+  height: 54px;
+  top: 0;
+  border: none;
+}
+
+.nav-weather{
+  border-right: none;
 }
 
 .nav-img {
@@ -153,14 +188,10 @@ h2 {
   border: none;
 }
 
-.search_input {
-  max-width: 100px;
-}
-
 .fa-search {
-  padding-top: 10px;
   font-size: 20px;
   cursor: pointer;
+  font-weight: lighter;
 }
 
 .heading {
