--- a/style.css
+++ b/style.css
@@ -226,18 +226,48 @@ h2 {
 }
 
 .politics {
-  position: relative;
-  max-width: 100px;
+  font-size: 17px;
+  font-weight: bold;
+  font-family: "Roboto Condensed",sans-serif;
+  color: hsl(5, 94%, 52%);
+  text-transform: uppercase;
+  padding: 5px 15px 15px;
+  background-color: rgba(255,255,255,0.9);
+  position: absolute;
+  z-index: 1;
   margin-top: -29px;
-  padding: 5px 5px;
-  text-align: center;
-  text-decoration: none;
-  color: red;
-  background-color: hsl(200, 9%, 93%);
+  display: block;
 }
 
 .top-story-article {
   padding: 0 0 20px;
+}
+
+.heros-pandemic-section-title{
+ text-decoration: none;
+ font-size: 16px;
+ color: rgba(3, 3, 3, 0.5);
+}
+
+.hero-pandemic-title{
+  color:rgb(39,39,39);
+  font-size: 20px;
+  font-family: "Lora", serif;
+  margin: 0 0 10px;
+  font-weight: lighter;
+}
+
+.hero-pandemic-para{
+  font-size: 15px;
+  margin: 0 0 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(171,171,171);
+  line-height: 20px;
+}
+a:hover{
+  text-decoration: none;
+  background-color: none;
+  text-underline-position: none;
 }
 
 .heros-articles {
@@ -258,9 +288,6 @@ h2 {
   padding: 15px 0 20px;
 }
 
-.card-text-hero {
-  margin: 0 0 10px;
-}
 
 .opinion-article {
   padding: 0 0 10px;
@@ -437,6 +464,18 @@ h1 a:hover {
 
 .mag-article-wrapper {
   padding: 0 15px;
+}
+
+.mag-img{
+    /* transform: translate(-50%,0%);
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: auto;
+    height: 100%;
+    max-width: inherit; */
+    /* width: 100%;
+    height: 80%; */
 }
 
 .mag-promo-link {
