--- a/style.css
+++ b/style.css
@@ -438,15 +438,16 @@ h1 a:hover {
   text-transform: uppercase;
   line-height: 16px;
   bottom: 0;
-  left: 0;
-  width: fit-content;
-  margin-bottom: 2.4rem;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 3.4rem;
   display: block;
   font-size: bold 16px;
-  padding: 0 10px;
+  padding: 10px 10px;
   background-color: rgba(255, 255, 255, 0.9);
   position: absolute;
   z-index: 1;
+  /* height: 32px; */
 }
 
 .category a:hover {
@@ -464,18 +465,7 @@ h1 a:hover {
 
 .mag-article-wrapper {
   padding: 0 15px;
-}
-
-.mag-img{
-    /* transform: translate(-50%,0%);
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: auto;
-    height: 100%;
-    max-width: inherit; */
-    /* width: 100%;
-    height: 80%; */
+  height: 80%;
 }
 
 .mag-promo-link {
@@ -487,6 +477,7 @@ h1 a:hover {
   padding: 10px 10px 10px 12px;
   line-height: 18px;
   text-transform: uppercase;
+  padding: 10px 10px 10px 12px;
 }
 
 .mag-promo-link::after {
@@ -502,24 +493,49 @@ h1 a:hover {
   text-decoration: none;
 }
 
+.all-magz-articles-img{
+  width: 100%;
+  height: 100%;
+  min-height: 278px ;
+}
 .newsweek-icon {
   width: 30px;
   height: 30px;
 }
 
-.us-heading-wrapper {
-  padding: 25px 0 11px;
+.editor-title{
+  font-size: 24px;
+  font-family: "Roboto Condensed", sans-serif;
+  color: #000;
+  font-weight: bold;
 }
 
-.us {
-  font-size: 25px;
+.editor-text{
+  color: #333;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
+.us-title{
+  font-size: 22px;
+  font-family: "Roboto Condensed",sans-serif;
+  color: #000;
+  margin: 10px 0 25px;
+  font-weight: bold;
+}
+
+.us-article-title-small{
+  color: #000;
+  font-size: 17px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: bold;
+
+}
 .height {
   height: 98px;
 }
 
-.sub-title {
+/* .sub-title {
   font: 16px;
   padding: 0 0 11px;
 }
@@ -558,11 +574,51 @@ h1 a:hover {
 .sign-up-container {
   background-color: white;
   padding-left: 0 15px;
+} */
+
+.slide-tag {
+  background: url(https://g.newsweek.com/themes/newsweek/images/icon-slideshows-nw.png) 0 0/contain no-repeat;
+  font-size: 1.5rem;
 }
 
+div .slide-tag {
+  width: 80px;
+  height: 63px;
+}
+
+/* ---------------ASIDE SECTION------------ */
+
+.img-newsletter {
+  top: 40px;
+  left: 70px;
+}
+
+.newsletter-div {
+  height: 290px;
+  background: url(https://d.newsweek.com/en/full/1525348/newsletter-promo-home-page.png?w=397&h=265&q=90&f=172a044c08b5e64f42dcb61b425487bf) 50% 0/cover no-repeat;
+}
+
+aside .section-title-2 {
+  font-size: 1rem;
+}
+
+aside .btn {
+  background-color: #f72210;
+}
+
+aside .border-top {
+  border: 2px solid #f4f5f6;
+}
+
+.gray-background {
+  background-color: #f4f5f6;
+}
+
+
+/* © 2020 GitHub, Inc.
 .footer-logo {
   max-width: 236px;
-}
+} */
 
 .footer-copyright {
   font-size: 10px;
@@ -582,6 +638,17 @@ h1 a:hover {
   border-right: 1px solid hsl(0, 0%, 85%);
   padding-right: 10px;
   margin-right: 10px;
+}
+.footer-logo {
+  width: 236px;
+  height: 35px;
+}
+
+.copyright,
+.list-group-item a{
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #666;
 }
 
 /*
